--- a/animation/project-2/index.html
+++ b/animation/project-2/index.html
@@ -14,9 +14,7 @@
   <link href="/assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -44,8 +42,7 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
-            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -59,24 +56,24 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <div class="navbar-brand">
-        <a href="/">
+        <div class="navbar-brand">
+          <a href="/">
           <img class="logo" src="/assets/img/logo-nk.png"></a>
-      </div>
-      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-        <span></span>
-      </a>
+        </div>
+        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+          <span></span>
+        </a>
     </div>
   </nav>
 
   <main id="main">
     <!-- ======= Overview Section ======= -->
-    <section class="section pt-3 pb-5">
+    <section class="section pt-3 pb-3">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Heading</h2>
-            <p>Description</p>
+          <div class="" data-aos="fade-up">
+            <h2>Whispers of the Enchanted Forest</h2>
+            <p>It is an animated tale of magic and harmony as ancient secrets come alive, weaving dreams and reality in a visually captivating celebration.</p>
           </div>
         </div>
       </div>
@@ -84,349 +81,41 @@
       <div class="site-section pb-0">
         <div class="container">
           <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <img src="/assets/img/coming-soon.png" alt="Image" class="img-fluid">
+            <div class="col-md-8" data-aos="fade-up" id="video1">
+              <div class="video-container">
+                <iframe width="640" height="564" src="https://www.youtube.com/embed/OQpitmStz50?si=wvGhJybUSPP9cbD7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
             </div>
-            <div class="col-md-4 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="h3">Credits</h3>
+            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
-                <strong>Storyboard, Design and Animation -</strong>
+                <strong>Content curation, AI image generation and Video editing - </strong>
                 <span>Navin Kumar</span>
+                <p></p>
               </div>
               <strong class="mb-3">Softwares</strong>
               <ul class="list-unstyled mb-5">
-                <li>Illustrator</li>
-                <li>After Effects</li>
-                <li>Audacity</li>
-                <li>Premiere Pro</li>
+                <li>ChatGPT (LLM)</li>
+                <li>Draw Things (Stable Diffusion)</li>
+                <li>DaVinchi Resolve</li>
               </ul>
               <!--p><a href="#" class="readmore">Visit Website</a></p-->
             </div>
           </div>
         </div>
     </section><!-- End Overview Section -->
+    
 
     <!-- ======= Brief Concept Section ======= -->
-    <section class="section pt-0 pb-3">
+    <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-          <h3 class="h3 heading">Brief Concept</h3>
-          <p>Description - Enter your text</p>
+            <h3 class="h3 heading">Brief Concept</h3>
+            <p>"Whispers of the Enchanted Forest" is an animated film where Cotton, the guardian of a magical realm, discovers a forgotten book with ancient secrets. Opening its pages releases mystical sprites, awakening the forest's creatures and filling it with enchantment. The film explores the harmony between dreams and reality, showcasing the power of embracing enchantment. With captivating visuals and an enchanting soundtrack, it creates a magical atmosphere for audiences of all ages.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
-
-
-
-    <section class="section site-portfolio pt-0 pb-5">
-
-      <div class="story_slider">
-
-        <h3 class="s_head" data-aos="fade-up" data-aos-delay="200">Storyboard</h3>
-        <div class="slider-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- First Slider with Heading -->
-          <div class="slider" id="slider1">
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 1">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 2">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 3">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 4">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 5">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 6">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 7">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 8">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 9">
-            </div>
-            <div class="progress-container">
-              <div class="progress-bar"></div>
-            </div>
-          </div>
-        </div>
-
-        <h3 class="s_design" data-aos="fade-up" data-aos-delay="200">Design</h3>
-        <div class="slider-container" data-aos="fade-up" data-aos-delay="200">
-          <!-- Second Slider with Heading -->
-          <div class="slider" id="slider2">
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 1">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 2">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 3">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 4">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 5">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 6">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 7">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 8">
-            </div>
-            <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 9">
-            </div>
-            <div class="progress-container">
-              <div class="progress-bar"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- JavaScript for Slideshow -->
-    <script>
-      // Function to show a specific slide for a given slider
-      function showSlide(sliderIndex, n) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        const progressBar = slider.querySelector('.progress-bar');
-        let currentIndex = 0;
-
-        slides.forEach((slide) => {
-          slide.style.display = 'none';
-        });
-
-        slides[n].style.display = 'block';
-
-        // Update the progress bar width
-        progressBar.style.width = ((n + 1) / slides.length * 100) + '%';
-      }
-
-      // Function to automatically advance to the next slide
-      function autoAdvanceSlider(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        setInterval(function () {
-          slides[currentIndex].style.display = 'none';
-          currentIndex = (currentIndex + 1) % slides.length;
-          slides[currentIndex].style.display = 'block';
-          showSlide(sliderIndex, currentIndex); // Update the progress bar
-        }, 5000); // Change slide every 5 seconds
-      }
-
-      // Function to handle swipe gestures
-      function handleSwipe(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        let touchStartX;
-
-        slider.addEventListener('touchstart', (e) => {
-          touchStartX = e.touches[0].clientX;
-        });
-
-        slider.addEventListener('touchend', (e) => {
-          const touchEndX = e.changedTouches[0].clientX;
-          const delta = touchEndX - touchStartX;
-
-          if (delta > 30) { // Swipe right (previous slide)
-            showPreviousSlide(sliderIndex);
-          } else if (delta < -30) { // Swipe left (next slide)
-            showNextSlide(sliderIndex);
-          }
-        });
-      }
-
-      // Function to show the previous slide
-      function showPreviousSlide(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        for (let i = 0; i < slides.length; i++) {
-          if (slides[i].style.display === 'block') {
-            currentIndex = i;
-            break;
-          }
-        }
-
-        slides[currentIndex].style.display = 'none';
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        slides[currentIndex].style.display = 'block';
-        showSlide(sliderIndex, currentIndex); // Update the progress bar
-      }
-
-      // Function to show the next slide
-      function showNextSlide(sliderIndex) {
-        const slider = document.querySelectorAll('.slider')[sliderIndex];
-        const slides = slider.querySelectorAll('.slide');
-        let currentIndex = 0;
-
-        for (let i = 0; i < slides.length; i++) {
-          if (slides[i].style.display === 'block') {
-            currentIndex = i;
-            break;
-          }
-        }
-
-        slides[currentIndex].style.display = 'none';
-        currentIndex = (currentIndex + 1) % slides.length;
-        slides[currentIndex].style.display = 'block';
-        showSlide(sliderIndex, currentIndex); // Update the progress bar
-      }
-
-      // Initialize swipe gestures and auto-advancing for each slider
-      document.querySelectorAll('.slider').forEach((slider, index) => {
-        showSlide(index, 0);
-        autoAdvanceSlider(index);
-        handleSwipe(index);
-      });
-    </script>
-
-
-
-    <!-- ======= Storyboard Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="container">
-
-        <div class="storyboard">
-          <div class="row mb-3 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="story">Storyboard</h3>
-              <!--p class="mb-0">Enter your text</p-->
-            </div>
-          </div>
-
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Storyboard Section -->
-
-    <!-- ======= Design Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="container">
-        <div class="storyboard">
-          <div class="row mb-3 align-items-center">
-            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="story">Design</h3>
-              <!--p class="mb-0">Enter your text</p-->
-            </div>
-          </div>
-
-          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Design Section -->
-
-    <!-- ======= Animation Section ======= -->
-    <section class="section site-portfolio pt-0 pb-5">
-      <div class="space">
-      <div class="container">
-        <div class="row mb-3 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="ani">Animation</h3>
-            <!--p class="mb-0">Enter your text</p-->
-          </div>
-        </div>
-
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
-            </div>
-          </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
-            </div>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </section><!-- End Animation Section -->
+    
 
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
@@ -462,8 +151,7 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/aos/aos.js"></script>
