--- a/animation/project-3/index.html
+++ b/animation/project-3/index.html
@@ -71,12 +71,13 @@
 
   <main id="main">
     <!-- ======= Overview Section ======= -->
-    <section class="section pt-3 pb-5">
+    <section class="section pt-3 pb-3">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Heading</h2>
-            <p>Description</p>
+          <div class="" data-aos="fade-up">
+            <h2>Hello Friends!</h2>
+            <p>This video is a brief introduction about my services and also the first project. I made this video to
+              reach out to my potential clients.</p>
           </div>
         </div>
       </div>
@@ -85,10 +86,13 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img src="/assets/img/coming-soon.png" alt="Image" class="img-fluid">
+              <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/481770486" width="640" height="564" frameborder="0"
+                  allow="autoplay; fullscreen" allowfullscreen></iframe>
+              </div>
             </div>
-            <div class="col-md-4 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="h3">Credits</h3>
+            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <h3 class="h3 heading">Credits</h3>
               <div class="mb-3">
                 <strong>Storyboard, Design and Animation -</strong>
                 <span>Navin Kumar</span>
@@ -107,14 +111,21 @@
     </section><!-- End Overview Section -->
 
     <!-- ======= Brief Concept Section ======= -->
-    <section class="section pt-0 pb-3">
+    <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
           <h3 class="h3 heading">Brief Concept</h3>
-          <p>Description - Enter your text</p>
+          <p>The idea was to create an informative video for explaining the market need for Product & Explainer Videos.
+            I have used variety of different graphic style to showcase my skills. I have also applied the 12 basic
+            principles of animation to make it look more dynamic.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
+
+
+
+
+
 
 
 
@@ -164,31 +175,31 @@
           <!-- Second Slider with Heading -->
           <div class="slider" id="slider2">
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 1">
+              <img src="/assets/img/Hello Friends/Hello Friends 01.webp" alt="Slide 1">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 2">
+              <img src="/assets/img/Hello Friends/Hello Friends 02.webp" alt="Slide 2">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 3">
+              <img src="/assets/img/Hello Friends/Hello Friends 03.webp" alt="Slide 3">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 4">
+              <img src="/assets/img/Hello Friends/Hello Friends 04.webp" alt="Slide 4">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 5">
+              <img src="/assets/img/Hello Friends/Hello Friends 05.webp" alt="Slide 5">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 6">
+              <img src="/assets/img/Hello Friends/Hello Friends 06.webp" alt="Slide 6">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 7">
+              <img src="/assets/img/Hello Friends/Hello Friends 07.webp" alt="Slide 7">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 8">
+              <img src="/assets/img/Hello Friends/Hello Friends 08.webp" alt="Slide 8">
             </div>
             <div class="slide">
-              <img src="/assets/img/no-image.jpg" alt="Slide 9">
+              <img src="/assets/img/Hello Friends/Hello Friends 09.webp" alt="Slide 9">
             </div>
             <div class="progress-container">
               <div class="progress-bar"></div>
@@ -300,19 +311,16 @@
     </script>
 
 
-
     <!-- ======= Storyboard Section ======= -->
     <section class="section site-portfolio pt-0 pb-5">
       <div class="container">
-
+        <!-- Desktop View -->
         <div class="storyboard">
           <div class="row mb-3 align-items-center">
             <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
               <h3 class="story">Storyboard</h3>
-              <!--p class="mb-0">Enter your text</p-->
             </div>
           </div>
-
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <img class="img-fluid" src="/assets/img/no-image.jpg">
@@ -356,76 +364,77 @@
               <!--p class="mb-0">Enter your text</p-->
             </div>
           </div>
-
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 01.webp">
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 02.webp">
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 03.webp">
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 04.webp">
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 05.webp">
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 06.webp">
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 07.webp">
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 08.webp">
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <img class="img-fluid" src="/assets/img/no-image.jpg">
+              <img class="img-fluid" src="/assets/img/Hello Friends/Hello Friends 09.webp">
             </div>
           </div>
         </div>
+
+
       </div>
     </section><!-- End Design Section -->
 
     <!-- ======= Animation Section ======= -->
     <section class="section site-portfolio pt-0 pb-5">
       <div class="space">
-      <div class="container">
-        <div class="row mb-3 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="ani">Animation</h3>
-            <!--p class="mb-0">Enter your text</p-->
+        <div class="container">
+          <div class="row mb-3 align-items-center">
+            <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+              <h3 class="ani">Animation</h3>
+              <!--p class="mb-0">Enter your text</p-->
+            </div>
           </div>
-        </div>
 
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
+          <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+              <div class="video-container">
+                <video autoplay loop>
+                  <source src="/assets/video/Hello Friends/BTS 01.mp4">
+                </video>
+              </div>
             </div>
-          </div>
-          <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
+            <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
+              <div class="video-container">
+                <video autoplay loop>
+                  <source src="/assets/video/Hello Friends/BTS 02.mp4">
+                </video>
+              </div>
             </div>
-          </div>
-          <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-            <div class="video-container">
-              <video autoplay loop>
-                <source src="#">
-              </video>
-            </div>
+            <!-- <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
+              <div class="video-container">
+                <video autoplay loop>
+                  <source src="#">
+                </video>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
-    </div>
     </section><!-- End Animation Section -->
 
     <!-- ======= Previous/Next Section ======= -->
