--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-1" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Hello Friends!</h3>
+                  <h3>Ayodhya-Ram Mandir</h3>
                   <!--span>Sub-heading</span-->
                 </div>
-                <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
+                <img class="img-fluid" src="assets/img/ram_mandir.jpg">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-2" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Heading</h3>
+                  <h3>Enchanted Forest</h3>
                   <!--span>Sub-heading</span-->
                 </div>
-                <img class="img-fluid" src="assets/img/coming-soon.png">
+                <img class="img-fluid" src="assets/img/forest.jpg">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="animation/project-3" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Heading</h3>
+                  <h3>Hello Friends!</h3>
                   <!--span>Sub-heading</span-->
                 </div>
-                <img class="img-fluid" src="assets/img/coming-soon.png">
+                <img class="img-fluid" src="assets/img/Hello Friends/Hello Friends 09.webp">
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
