--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -73,7 +73,7 @@
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
             <h2>Ayodhya - Ram Mandir: The Symbol of Sanatana Dharma</h2>
-            <p>Embark on a divine journey in a one-minute animated spectacle, capturing the grand inauguration of the Lord Ram temple in Ayodhya. Join the celebration of faith, unity, and cultural diversity with dazzling visuals and sacred moments.</p>
+            <p>Embark on a divine journey in a one-minute animated spectacle, capturing the grand inauguration of the Lord Ram temple in Ayodhya.</p>
           </div>
         </div>
       </div>
@@ -81,9 +81,9 @@
       <div class="site-section pb-0">
         <div class="container">
           <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up" id="video1">
+            <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe width="640" height="564" frameborder="0" src="https://mega.nz/embed/MflSVQJQ#NJuKdtoQIeqQRTGDLpk3ms7kC7xcjP8LKY6ckmSTR74" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/906940689?h=fd1d3d5749" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -95,9 +95,9 @@
               </div>
               <strong class="mb-3">Softwares</strong>
               <ul class="list-unstyled mb-5">
-                <li>Adobe Photoshop</li>
-                <li> After Effects</li>
-                <li>Final Cut Pro</li>
+                <li>ChatGPT (LLM)</li>
+                <li>Draw Things (Stable Diffusion)</li>
+                <li>DaVinci Resolve</li>
               </ul>
               <!--p><a href="#" class="readmore">Visit Website</a></p-->
             </div>
