--- a/animation/project-2/index.html
+++ b/animation/project-2/index.html
@@ -97,7 +97,7 @@
               <ul class="list-unstyled mb-5">
                 <li>ChatGPT (LLM)</li>
                 <li>Draw Things (Stable Diffusion)</li>
-                <li>DaVinchi Resolve</li>
+                <li>DaVinci Resolve</li>
               </ul>
               <!--p><a href="#" class="readmore">Visit Website</a></p-->
             </div>
@@ -111,7 +111,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief Concept</h3>
-            <p>"Whispers of the Enchanted Forest" is an animated film where Cotton, the guardian of a magical realm, discovers a forgotten book with ancient secrets. Opening its pages releases mystical sprites, awakening the forest's creatures and filling it with enchantment. The film explores the harmony between dreams and reality, showcasing the power of embracing enchantment. With captivating visuals and an enchanting soundtrack, it creates a magical atmosphere for audiences of all ages.</p>
+            <p>Whispers of the Enchanted Forest" is an animated film where Cotton, the guardian of a magical realm, discovers a forgotten book with ancient secrets. Opening its pages releases mystical sprites, awakening the forest's creatures and filling it with enchantment. The film explores the harmony between dreams and reality, showcasing the power of embracing enchantment. With captivating visuals and an enchanting soundtrack, it creates a magical atmosphere for audiences of all ages.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
