--- a/video/project-5/index.html
+++ b/video/project-5/index.html
@@ -82,9 +82,8 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <div class="video-container" id="soil">
-                <iframe width="640" height="564" frameborder="0" src="https://mega.nz/embed/waElnSBQ#rOPBniUs8YzYb4wbV3wnx9q0LS-AAcjNOIQegNaQlnU" allowfullscreen ></iframe>
-                <!-- <video width="640" height="564" controls poster="/assets/img/A Walk for Soil.png" src="https://drive.google.com/uc?id=18rEz8jnkRwPhG2TmAi1MkxCAptpJE95W" type="video/mp4" title="A Walk for Soil"></video> -->
+              <div class="video-container" id="soil" >
+                <iframe src="https://player.vimeo.com/video/906940059?h=3276163003" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -112,8 +111,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
             <h3 class="h3 heading">Brief Concept</h3>
-            <p>This video is about two heroes who took the responsibility to spread awareness about the Save Soil Campaign, an initiative by Sadhguru.</p>
-            <p>A duo of people, Jai Solanki and Pradeep Yadav, undertook a historic walk across India, covering 3600 km, visiting 43 cities, and crossing 6 states in 5 months.</p>
+            <p>This video is about two heroes who took the responsibility to spread awareness about the Save Soil Campaign, an initiative by Sadhguru. A duo of people, Jai Solanki and Pradeep Yadav, undertook a historic walk across India, covering 3600 km, visiting 43 cities, and crossing 6 states in 5 months.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
