--- a/video/project-6/index.html
+++ b/video/project-6/index.html
@@ -91,11 +91,7 @@
           <div class="row align-items-stretch">
             <div class="col-md-5" data-aos="fade-up">
               <div class="shorts" id="save_soil">
-                <!-- <video controls height="600px" width="340px" poster="/assets/img/Save Soil (9-16).png"
-                  src="https://drive.google.com/uc?id=1lWXb4rcJJdrc7pF05fPhTo1uTDriYFi8" type="video/mp4"
-                  title="Save Soil"></video> -->
-                  <iframe width="340" height="600" frameborder="0" src="https://mega.nz/embed/0DsTmSIa#qThMF5etzXQA3ynF02ytmjxZvNf123ynp36W3uOcaKA" allowfullscreen ></iframe>
-
+                <iframe src="https://player.vimeo.com/video/906938238?h=03f56f3572" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col" data-aos="fade-up" data-aos-delay="100">
