--- a/animation/project-3/index.html
+++ b/animation/project-3/index.html
@@ -445,7 +445,7 @@
             <a href="../project-2" class="previous round"><i class='bx bxs-chevron-left'></i></a>
           </div>
           <div class="align-right">
-            <a href="#" class="next round"><i class='bx bxs-chevron-right'></i></a>
+            <a href="../project-1" class="next round"><i class='bx bxs-chevron-right'></i></a>
           </div>
         </div>
       </div>
